# quicktunnel

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.js  docker-compose.yml  package.json
.github/workflows/: release-client.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml  docker-compose.yml
server/src/: errors.rs  main.rs  quic.rs
server/static/: 404.css
server/templates/: 404.html  index.html
src/: lib.rs  main.rs
static/: app.js  error.css  style.css
templates/: error.html  index.html
