[package]
name = "qt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["net", "rt-multi-thread", "macros", "io-util"] }
quinn = { version = "0.11" }
rustls = "0.23"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
