[package]
name = "qtn"
version = "0.1.3"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["net", "rt-multi-thread", "macros", "io-util"] }
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
