[package]
name = "quicktunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["net", "rt-multi-thread", "macros", "time", "sync"] }
axum = "0.8"
russh = "0.57"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14.7"
futures-util = "0.3.32"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
